# XmlProject

./: .gitignore  AP_MessageData.cpp  AP_MessageData.h  BusRoute.xml  Makefile.am  NetWork.cpp  NetWork.h  Protocol.h  README.md  Server.cpp  VextexNode.h  XmlParser.cpp  XmlParser.h  configure.ac
Qt_Client/: Qt_Client.pro  clientthread.cpp  clientthread.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  protocol.h
build-Qt_Client-test-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
build-Qt_Client-test-Debug/debug/: moc_clientthread.cpp  moc_mainwindow.cpp
test/: AP_MessageData_test.cpp  Makefile.am  XmlParser_test.cpp
